Fix margin of nav links on mobile

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -190,9 +190,16 @@ header {
           font-size: 1.5rem;
         }
       }
-
       .mobile-menu {
-        top: 50px;
+        .container {
+          .mobile-menu-links {
+            ul {
+              li {
+                margin: 0 0.5rem;
+              }
+            }
+          }
+        }
       }
     }
     .hero {
